-- Drop tables
DROP TABLE IF EXISTS OrderDetail;
DROP TABLE IF EXISTS COrder;
DROP TABLE IF EXISTS Product;
DROP TABLE IF EXISTS Customer;
DROP TABLE IF EXISTS Category;
DROP TABLE IF EXISTS Admin;

-- Create tables
CREATE TABLE Admin(Username VARCHAR(50) PRIMARY KEY, Password TEXT);
INSERT INTO Admin(Username, Password) VALUES('sonkk', '123');

CREATE TABLE Category(ID INT PRIMARY KEY AUTO_INCREMENT, Name TEXT);
INSERT INTO Category(Name) VALUES('Smartphone');
INSERT INTO Category(Name) VALUES('Laptop');
INSERT INTO Category(Name) VALUES('Tablet');

CREATE TABLE Customer(ID INT PRIMARY KEY AUTO_INCREMENT, Username TEXT, Password TEXT, Name TEXT, Phone TEXT, Email TEXT, Active INT, Token TEXT);
CREATE TABLE Product(ID INT PRIMARY KEY AUTO_INCREMENT, Name TEXT, Price INT, Image LONGBLOB, CDate BIGINT, CatID INT, FOREIGN KEY (CatID) REFERENCES Category(ID) ON DELETE CASCADE);
CREATE TABLE COrder(ID INT PRIMARY KEY AUTO_INCREMENT, CDate BIGINT, Total BIGINT, Status TEXT, CustID INT, FOREIGN KEY (CustID) REFERENCES Customer(ID) ON DELETE CASCADE);
CREATE TABLE OrderDetail(OrderID INT, ProdID INT, Quantity INT, PRIMARY KEY (OrderID, ProdID), FOREIGN KEY (OrderID) REFERENCES COrder(ID) ON DELETE CASCADE, FOREIGN KEY (ProdID) REFERENCES Product(ID) ON DELETE CASCADE);